--- a/main.tex
+++ b/main.tex
@@ -74,9 +74,9 @@
 
 \begin{document}
 %
-\title{Prompt-Engineering Approaches \\to Reducing Costs in LLM-Based Automated Test Case Generation}
+\title{Prompt-Engineering Approaches \\to Reducing the Cost in LLM-Based Automated Test Case Generation}
 %
-\titlerunning{Prompt-Engineering Approaches to Reducing Costs in LLM-Based Automated Test Case Generation}
+\titlerunning{Prompt-Engineering Approaches to Reducing the Cost in LLM-Based Automated Test Case Generation}
 %
 
 \author{So Onishi\inst{1,2} \and
