--- a/main.tex
+++ b/main.tex
@@ -74,9 +74,9 @@
 
 \begin{document}
 %
-\title{Prompt-Engineering Approaches \\to Reducing the Cost in LLM-Based Automated Test Case Generation}
+\title{Prompt-Engineering Approaches to Reducing the Costs \\in LLM-Based Automated Test Case Generation}
 %
-\titlerunning{Prompt-Engineering Approaches to Reducing the Cost in LLM-Based Automated Test Case Generation}
+\titlerunning{Prompt-Engineering Approaches to Reducing the Costs in LLM-Based Automated Test Case Generation}
 %
 
 \author{So Onishi\inst{1,2} \and
@@ -104,7 +104,7 @@ Takahiro Koita\inst{1,5}}
 \begin{abstract}
     \input{chapters/00_abst}
 
-    \keywords{Prompt-Engineering \and Token Reduction \and Natural Language Compression \and API Costs \and Code Documentation(Docstrings).}
+    \keywords{Prompt-Engineering \and Token Reduction \and Natural Language Compression \and API Costs \and In-Code Documentation(Docstrings).}
 \end{abstract}
 %
 %
